chore(home, faq, app): fixed header covering content, copy on home page, styles on faq

--- a/src/app/global.sass
+++ b/src/app/global.sass
@@ -107,3 +107,9 @@ p
   width: 200px
   padding: 15px
   margin-top: 32px
+  
+@media screen and (max-width: 767px)
+  h2
+    font-size: 31px
+  h6
+    font-size: 14px
