--- a/src/app/style.sass
+++ b/src/app/style.sass
@@ -18,3 +18,5 @@
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.14), 0 2px 10px rgba(0, 0, 0, 0.28)
   z-index: 2
   
+.template
+  padding-top: $header-height
